--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -20,6 +21,7 @@
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.48",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/styled-components-react-native": "^5.2.5",
     "typescript": "^5.3.3"
   },
   "private": true
