--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-splash-screen": "^3.3.0",
     "styled-components": "^6.1.8"
   },
